# computational-intelligence-22

./: README.md
lab01_set-covering/: pyproject.toml  solution.py  utilities.py
lab1/: README.md  gx_utils.py  lab1.py  results.txt
lab2/: README.md  set_covering_genetic.py
lab3/: README.md  evolution.py  main.py  minmax.py  nim_utils.py  reinforcement_learning.py  test_evolution.py  test_minmax.py  test_reinforcement.py
