[tool.poetry]
name = "lab01-set-covering"
version = "0.1.0"
description = ""
authors = ["Sergiu Abed s295149 <s295149@studenti.polito.it>"]
readme = "README.md"
packages = [{include = "lab01_set_covering"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
